[tool.poetry]
name = "unbanbot"
version = "0.1.0"
description = ""
license = "Apache-2.0"
authors = ["Firdaus Hakimi <hakimifirdaus944@gmail.com>"]
readme = "README.md"
packages = [{include = "unbanbot"}]

[tool.poetry.dependencies]
python = "^3.11"
pyrogram = "^2.0.99"
uvloop = "^0.17.0"
tgcrypto = "^1.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
